--- a/links/services.html
+++ b/links/services.html
@@ -28,6 +28,7 @@
     </header>
     <main>
         <section class="section-services">
+            <img class="section-services__creative-wave" src="../img/svg/Services/service-creative-wave.svg">
             <div class="section-services__title">
                     <div class="u-center-text text-normal">
                         <p class="text-normal--description">FWRD is a comprehensive solution for bringing products to market, be it physical, merchandise or digital offerings.</p>
@@ -187,6 +188,9 @@
                 </div>
 
             </div>
+            <img class="section-services__personalised-wave" src="../img/svg/Services/service-personalised-wave.svg" >
+            <img class="section-services__btm-wave" src="../img/svg/Services/service-btm-left-wave.svg" >
+            
         </section>
         <section class="section-clients">
             <div class="notch-title notch-title--green notch-title--top-left">
