--- a/links/services.html
+++ b/links/services.html
@@ -89,6 +89,7 @@
                         <div style="text-align:end;" class="text-normal "> 
                             <h2 class="text-normal--title u-color-orange">Collaboration.</h2>
                             <h2 class="text-normal--title u-color-orange">Always.</h2>
+                            <img class="zigzag-container__image" src="../img/svg/Services/service-collaboration.svg">
                             <p class="text-normal--description">When we engage with a client, it's a joint venture; we chart the course hand-in-hand. We do it because we believe in our partners' visions and are committed to seeing their efforts flourish.</p>
                         </div>
                     </div>
@@ -138,6 +139,7 @@
                         <div style="text-align:end;" class="text-normal "> 
                             <h2 class="text-normal--title u-color-orange">Personalised and</h2>
                             <h2 class="text-normal--title u-color-orange">Personable.</h2>
+                            <img class="zigzag-container__image" src="../img/svg/Services/service-personalised.svg">
                             <p class="text-normal--description">We’re in this together. FWRD works with businesses worldwide, encompassing diverse industries, objectives, and audiences. Yet, all our partnerships are built on the same foundation: a friendly, open-minded, and collaborative approach.</p>                        </div>
                     </div>
                 </div>
