--- a/links/services.html
+++ b/links/services.html
@@ -9,6 +9,57 @@
     <script src="../scripts/index.js"></script>
 </head>
 <body class="services">
+    <div class="overlaying-navigation">
+        <input type="checkbox" class="overlaying-navigation__checkbox" id='navi-toggle'>
+        <label for="navi-toggle" class="overlaying-navigation__button">
+            <span class="overlaying-navigation__icon">&nbsp;</span>
+        </label>
+        <div class="overlaying-navigation__background">&nbsp;</div>
+        <div class="overlaying-navigation__nav">
+            <div class="overlaying-navigation__nav-item u-margin-top-mid">
+                <ul class="overlaying-navigation__list">
+                    <li class="overlaying-navigation__list-item"><a href="../index.html" class="overlaying-navigation__link">Home</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./portfolio.html" class="overlaying-navigation__link">Portfolio</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./services.html" class="overlaying-navigation__link">Services</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./testimonials.html" class="overlaying-navigation__link">Testimonials</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./contact.html" class="overlaying-navigation__link">Contact</a></li>
+                </ul>
+            </div>
+            <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
+                <span class="overlaying-navigation__link overlaying-navigation__link--mid u-padding-top-btm-async u-border-top-green">Let's create some magic</span>
+                <a href="./contact.html" class="button button--green footer__button footer__link">Inquire</a>
+            </div>
+            <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
+                <ul class="footer__list footer__list--standalone">
+                    <li class="footer__list-item">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
+                            <img src="../img/svg/instagram.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
+                            <img src="../img/svg/behance.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <!-- <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/dribble.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li> -->
+                    <li class="footer__list-item">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
+                            <img src="../img/svg/linkedin.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
+                            <img src="../img/svg/facebook.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <header class="header">
         <img src="../img/svg/services-header.svg" alt="" class="services__header-wave">
         <div class="menu">
@@ -29,6 +80,8 @@
     <main>
         <section class="section-services">
             <img class="section-services__creative-wave" src="../img/svg/Services/service-creative-wave.svg">
+            <img class="section-services__personalised-wave" src="../img/svg/Services/service-personalised-wave.svg" >
+            
             <div class="section-services__title">
                     <div class="u-center-text text-normal">
                         <p class="text-normal--description">FWRD is a comprehensive solution for bringing products to market, be it physical, merchandise or digital offerings.</p>
@@ -49,7 +102,7 @@
                         <img class="zigzag-container__image" src="../img/svg/Services/services-creative.svg">
                     </div>
                     <div class="zigzag-container__item-presentation">
-                        <div class="u-left-text ">
+                        <div class="u-left-text u-center-text-phone ">
                             <div class="text-normal">
                                 <h2 class="text-normal--title u-color-purple">Creative</h2>
                             </div>
@@ -87,8 +140,10 @@
                     </div>
                     <div class="zigzag-container__item-presentation">
                         <div style="text-align:end;" class="text-normal "> 
-                            <h2 class="text-normal--title u-color-orange">Collaboration.</h2>
-                            <h2 class="text-normal--title u-color-orange">Always.</h2>
+                            <div class="text-line">
+                                <h2 class="text-normal--title u-color-orange">Collaboration.</h2>
+                                <h2 class="text-normal--title u-color-orange">Always.</h2>
+                            </div>
                             <img class="zigzag-container__image" src="../img/svg/Services/service-collaboration.svg">
                             <p class="text-normal--description">When we engage with a client, it's a joint venture; we chart the course hand-in-hand. We do it because we believe in our partners' visions and are committed to seeing their efforts flourish.</p>
                         </div>
@@ -100,7 +155,7 @@
                         <img class="zigzag-container__image" src="../img/svg/Services/service-web.svg">
                     </div>
                     <div class="zigzag-container__item-presentation">
-                        <div class="u-left-text ">
+                        <div class="u-left-text u-center-text-phone ">
                             <div class="text-normal">
                                 <h2 class="text-normal--title u-color-purple">Web</h2>
                             </div>
@@ -137,8 +192,10 @@
                     </div>
                     <div class="zigzag-container__item-presentation">
                         <div style="text-align:end;" class="text-normal "> 
-                            <h2 class="text-normal--title u-color-orange">Personalised and</h2>
-                            <h2 class="text-normal--title u-color-orange">Personable.</h2>
+                            <div class="text-line">
+                                <h2 class="text-normal--title u-color-orange">Personalised and</h2>
+                                <h2 class="text-normal--title u-color-orange">Personable.</h2>
+                            </div>
                             <img class="zigzag-container__image" src="../img/svg/Services/service-personalised.svg">
                             <p class="text-normal--description">We’re in this together. FWRD works with businesses worldwide, encompassing diverse industries, objectives, and audiences. Yet, all our partnerships are built on the same foundation: a friendly, open-minded, and collaborative approach.</p>                        </div>
                     </div>
@@ -149,7 +206,7 @@
                         <img class="zigzag-container__image" src="../img/svg/Services/service-merchandise.svg">
                     </div>
                     <div class="zigzag-container__item-presentation">
-                        <div class="u-left-text ">
+                        <div class="u-left-text u-center-text-phone ">
                             <div class="text-normal">
                                 <h2 class="text-normal--title u-color-purple">Merchandise</h2>
                             </div>
@@ -190,7 +247,6 @@
                 </div>
 
             </div>
-            <img class="section-services__personalised-wave" src="../img/svg/Services/service-personalised-wave.svg" >
             <img class="section-services__btm-wave" src="../img/svg/Services/service-btm-left-wave.svg" >
             
         </section>
