--- a/links/services.html
+++ b/links/services.html
@@ -102,7 +102,7 @@
                         <img class="zigzag-container__image" src="../img/svg/Services/services-creative.svg">
                     </div>
                     <div class="zigzag-container__item-presentation">
-                        <div class="u-left-text u-center-text-phone ">
+                        <div class="u-left-text u-center-text-tab-generic ">
                             <div class="text-normal">
                                 <h2 class="text-normal--title u-color-purple">Creative</h2>
                             </div>
@@ -139,8 +139,8 @@
                         <img class="zigzag-container__image" src="../img/svg/Services/service-collaboration.svg">
                     </div>
                     <div class="zigzag-container__item-presentation">
-                        <div style="text-align:end;" class="text-normal "> 
-                            <div class="text-line">
+                        <div class="text-normal u-end-text u-center-text-phone"> 
+                            <div class="text-line u-flex-inline-column-align-end-phone">
                                 <h2 class="text-normal--title u-color-orange">Collaboration.</h2>
                                 <h2 class="text-normal--title u-color-orange">Always.</h2>
                             </div>
@@ -191,8 +191,8 @@
                         <img class="zigzag-container__image" src="../img/svg/Services/service-personalised.svg">
                     </div>
                     <div class="zigzag-container__item-presentation">
-                        <div style="text-align:end;" class="text-normal "> 
-                            <div class="text-line">
+                        <div class="text-normal u-end-text u-center-text-phone"> 
+                            <div class="text-line u-flex-inline-column-align-end-phone">
                                 <h2 class="text-normal--title u-color-orange">Personalised and</h2>
                                 <h2 class="text-normal--title u-color-orange">Personable.</h2>
                             </div>
@@ -206,7 +206,7 @@
                         <img class="zigzag-container__image" src="../img/svg/Services/service-merchandise.svg">
                     </div>
                     <div class="zigzag-container__item-presentation">
-                        <div class="u-left-text u-center-text-phone ">
+                        <div class="u-left-text u-center-text-phone">
                             <div class="text-normal">
                                 <h2 class="text-normal--title u-color-purple">Merchandise</h2>
                             </div>
