--- a/links/services.html
+++ b/links/services.html
@@ -11,8 +11,8 @@
 <body class="services">
     <div class="overlaying-navigation">
         <input type="checkbox" class="overlaying-navigation__checkbox" id='navi-toggle'>
-        <label for="navi-toggle" class="overlaying-navigation__button">
-            <span class="overlaying-navigation__icon">&nbsp;</span>
+        <label for="navi-toggle" class="overlaying-navigation__button overlaying-navigation__button--white">
+            <span class="overlaying-navigation__icon overlaying-navigation__icon--white">&nbsp;</span>
         </label>
         <div class="overlaying-navigation__background">&nbsp;</div>
         <div class="overlaying-navigation__nav">
