--- a/blogs/typingwithtoddlers.html
+++ b/blogs/typingwithtoddlers.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Innovative Team Collaboration, Business Philosophy, Mindful, Effective Communication Strategies, Transparent Business Practice">
+
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
