--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
       gtag('js', new Date());
       gtag('config', 'G-HD905NCG8K');
     </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Web design, Merchandise, Digital Commerce, Ecommerce, Creative">
+
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css"/>
     <script src="./scripts/index.js"></script>
