--- a/links/services.html
+++ b/links/services.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Creative agencies, Internet Marketing, Graphic Design, Merchandising Companies, Web Developer">
+
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
@@ -68,11 +70,11 @@
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="" class="navigation__link">Home</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Portfolio</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Services</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Testimonials</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Contact</a></li>
+                    <li class="navigation__item"><a href="../index.html" class="navigation__link">Home</a></li>
+                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Portfolio</a></li>
+                    <li class="navigation__item"><a href="./services.html" class="navigation__link">Services</a></li>
+                    <li class="navigation__item"><a href="./testimonials.html" class="navigation__link">Testimonials</a></li>
+                    <li class="navigation__item"><a href="./contact.html" class="navigation__link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -258,12 +260,13 @@
             </div>
             <div class="logos">
                 <div id="clients-slide" class="logos__slide">
-                    <img class="logos__image" src="../img/icons/fwrd-logo.png">
-                    <img class="logos__image" src="../img/icons/pxl.png">
-                    <img class="logos__image" src="../img/icons/msf.png">
-                    <img class="logos__image" src="../img/icons/wonitrol.png">
-                    <img class="logos__image" src="../img/icons/kreek.png">
-                    <img class="logos__image" src="../img/icons/nyp.png">
+                    <img class="logos__image" src="../img/icons/Clients/reactive.png">
+                    <img class="logos__image" src="../img/icons/Clients/msf.png">
+                    <img class="logos__image" src="../img/icons/Clients/mayhem.png">
+                    <img class="logos__image" src="../img/icons/Clients/nyp.png">
+                    <img class="logos__image" src="../img/icons/Clients/wonitrol.png">
+                    <img class="logos__image" src="../img/icons/Clients/kreek.png">
+                    <img class="logos__image" src="../img/icons/Clients/pxl.png">
                 </div>
             </div>
         </section>
