--- a/blogs/transparency.html
+++ b/blogs/transparency.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="work from home positions, remote work, home office jobs, work from home jobs, remotejobs">
+
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
