--- a/links/contact.html
+++ b/links/contact.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Web design, Merchandise, Digital Commerce, Ecommerce, Creative">
+    
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
