--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Design Portfolio, graphic design portfolio, portfolio websites, artist portfolio, adobe portfolio">
+
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
@@ -98,7 +100,7 @@
                     <a class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
-                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                    <img src="../img/covers/Portfolio/reactiv.png" class="zigzag-container__image">
                 </div>
             </div>
 
@@ -111,7 +113,7 @@
                     <a class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
-                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                    <img src="../img/covers/Portfolio/ian.png" class="zigzag-container__image">
                 </div>
             </div>
 
@@ -124,7 +126,7 @@
                     <a class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
-                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                    <img src="../img/covers/Portfolio/kreek.png" class="zigzag-container__image">
                 </div>
             </div>
 
@@ -138,7 +140,7 @@
                     <a class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
-                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                    <img src="../img/covers/Portfolio/pp.png" class="zigzag-container__image">
                 </div>
             </div>
 
@@ -151,7 +153,7 @@
                     <a class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
-                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                    <img src="../img/covers/Portfolio/nyp.png" class="zigzag-container__image">
                 </div>
             </div>
         </div>
@@ -171,12 +173,13 @@
         </div>
         <div class="logos">
             <div id="clients-slide" class="logos__slide">
-                <img class="logos__image" src="../img/icons/fwrd-logo.png">
-                <img class="logos__image" src="../img/icons/pxl.png">
-                <img class="logos__image" src="../img/icons/msf.png">
-                <img class="logos__image" src="../img/icons/wonitrol.png">
-                <img class="logos__image" src="../img/icons/kreek.png">
-                <img class="logos__image" src="../img/icons/nyp.png">
+                <img class="logos__image" src="../img/icons/Clients/reactive.png">
+                <img class="logos__image" src="../img/icons/Clients/msf.png">
+                <img class="logos__image" src="../img/icons/Clients/mayhem.png">
+                <img class="logos__image" src="../img/icons/Clients/nyp.png">
+                <img class="logos__image" src="../img/icons/Clients/wonitrol.png">
+                <img class="logos__image" src="../img/icons/Clients/kreek.png">
+                <img class="logos__image" src="../img/icons/Clients/pxl.png">
             </div>
         </div>
     </section>
@@ -217,7 +220,7 @@
             </div>
             <div class="form__row">
                 <div class="form__group u-center-text">
-                    <button class="button button--orange form__button" type="submit" disabled>
+                    <button class="button button--orange form__button" type="submit">
                         Submit
                     </button>
                 </div>
