--- a/links/testimonials.html
+++ b/links/testimonials.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Web design, Merchandise, Digital Commerce, Ecommerce, Creative">
+    
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
@@ -169,12 +171,13 @@
         </div>
         <div class="logos">
             <div id="clients-slide" class="logos__slide">
-                <img class="logos__image" src="../img/icons/fwrd-logo.png">
-                <img class="logos__image" src="../img/icons/pxl.png">
-                <img class="logos__image" src="../img/icons/msf.png">
-                <img class="logos__image" src="../img/icons/wonitrol.png">
-                <img class="logos__image" src="../img/icons/kreek.png">
-                <img class="logos__image" src="../img/icons/nyp.png">
+                <img class="logos__image" src="../img/icons/Clients/reactive.png">
+                <img class="logos__image" src="../img/icons/Clients/msf.png">
+                <img class="logos__image" src="../img/icons/Clients/mayhem.png">
+                <img class="logos__image" src="../img/icons/Clients/nyp.png">
+                <img class="logos__image" src="../img/icons/Clients/wonitrol.png">
+                <img class="logos__image" src="../img/icons/Clients/kreek.png">
+                <img class="logos__image" src="../img/icons/Clients/pxl.png">
             </div>
         </div>
     </section>
