--- a/blogs/transparency.html
+++ b/blogs/transparency.html
@@ -23,7 +23,7 @@
                     <li class="overlaying-navigation__list-item"><a href="../index.html" class="overlaying-navigation__link">Home</a></li>
                     <li class="overlaying-navigation__list-item"><a href="../links/portfolio.html" class="overlaying-navigation__link">Portfolio</a></li>
                     <li class="overlaying-navigation__list-item"><a href="../links/services.html" class="overlaying-navigation__link">Services</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="../links/testimonials.html" class="overlaying-navigation__link">Testimonials</a></li>
+                    <!-- <li class="overlaying-navigation__list-item"><a href="../links/testimonials.html" class="overlaying-navigation__link">Testimonials</a></li> -->
                     <li class="overlaying-navigation__list-item"><a href="../links/contact.html" class="overlaying-navigation__link">Contact</a></li>
                 </ul>
             </div>
@@ -72,7 +72,7 @@
                     <li class="navigation__item"><a href="../index.html" class="navigation__link">Home</a></li>
                     <li class="navigation__item"><a href="../links/portfolio.html" class="navigation__link">Portfolio</a></li>
                     <li class="navigation__item"><a href="../links/services.html" class="navigation__link">Services</a></li>
-                    <li class="navigation__item"><a href="../links/testimonials.html" class="navigation__link">Testimonials</a></li>
+                    <!-- <li class="navigation__item"><a href="../links/testimonials.html" class="navigation__link">Testimonials</a></li> -->
                     <li class="navigation__item"><a href="../links/contact.html" class="navigation__link">Contact</a></li>
                 </ul>
             </nav>
@@ -199,7 +199,7 @@
                 <li class="footer__list-item"><a href="../links/services.html" class="footer__link">About</a></li>
                 <li class="footer__list-item"><a href="../links/portfolio.html" class="footer__link">Portfolio</a></li>
                 <li class="footer__list-item"><a href="../index.html#section-blog" class="footer__link">Blog</a></li>
-                <li class="footer__list-item"><a href="../links/testimonials.html" class="footer__link">Testimonials</a></li>
+                <!-- <li class="footer__list-item"><a href="../links/testimonials.html" class="footer__link">Testimonials</a></li> -->
                 <li class="footer__list-item"><a href="../links/contact.html" class="footer__link">Contact us</a></li>
             </div>
             <div class="footer__list-section">
