--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -24,7 +24,7 @@
                     <li class="overlaying-navigation__list-item"><a href="../index.html" class="overlaying-navigation__link">Home</a></li>
                     <li class="overlaying-navigation__list-item"><a href="./portfolio.html" class="overlaying-navigation__link">Portfolio</a></li>
                     <li class="overlaying-navigation__list-item"><a href="./services.html" class="overlaying-navigation__link">Services</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="./testimonials.html" class="overlaying-navigation__link">Testimonials</a></li>
+                    <!-- <li class="overlaying-navigation__list-item"><a href="./testimonials.html" class="overlaying-navigation__link">Testimonials</a></li> -->
                     <li class="overlaying-navigation__list-item"><a href="./contact.html" class="overlaying-navigation__link">Contact</a></li>
                 </ul>
             </div>
@@ -73,7 +73,7 @@
                     <li class="navigation__item"><a href="../index.html" class="navigation__link">Home</a></li>
                     <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Portfolio</a></li>
                     <li class="navigation__item"><a href="./services.html" class="navigation__link">Services</a></li>
-                    <li class="navigation__item"><a href="./testimonials.html" class="navigation__link">Testimonials</a></li>
+                    <!-- <li class="navigation__item"><a href="./testimonials.html" class="navigation__link">Testimonials</a></li> -->
                     <li class="navigation__item"><a href="./contact.html" class="navigation__link">Contact</a></li>
                 </ul>
             </nav>
@@ -243,7 +243,7 @@
             <li class="footer__list-item"><a href="./services.html" class="footer__link">About</a></li>
             <li class="footer__list-item"><a href="./portfolio.html" class="footer__link">Portfolio</a></li>
             <li class="footer__list-item"><a href="../index.html#section-blog" class="footer__link">Blog</a></li>
-            <li class="footer__list-item"><a href="./testimonials.html" class="footer__link">Testimonials</a></li>
+            <!-- <li class="footer__list-item"><a href="./testimonials.html" class="footer__link">Testimonials</a></li> -->
             <li class="footer__list-item"><a href="./contact.html" class="footer__link">Contact us</a></li>
         </div>
         <div class="footer__list-section">
