--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -156,6 +156,19 @@
                     <img src="../img/covers/Portfolio/nyp.png" class="zigzag-container__image">
                 </div>
             </div>
+
+            <div class="zigzag-container__item">
+                <div class="zigzag-container__item-description">
+                    <h4 class="zigzag-container__title">Design</h4>
+                    <h3 class="zigzag-container__client">Florida Mayhem</h3>
+                    <p class="zigzag-container__description">Complete end-to-end merchandise support, design services and web development for a world renowned esports organisation.</p>
+                    <a class="button button--orange zigzag-container__button">View project</a>
+                </div>
+                <div class="zigzag-container__item-presentation">
+                    <img src="../img/covers/Portfolio/mayhem.png" class="zigzag-container__image">
+                </div>
+            </div>
+
         </div>
         <div class="u-center-text u-padding-top-btm-lg">
             <button class="button button--green section-portfolios__button">
