--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Web design, Merchandise, Digital Commerce, Ecommerce, Creative">
+    <meta name="description" content="FWRD: A product-first creative house, empowering businesses with customised branding, marketing, and merchandising solutions." >
 
-    <title>Document</title>
+    <title>FWRD</title>
     <link rel="stylesheet" href="./css/style.css"/>
     <script src="./scripts/index.js"></script>
 </head>
