--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Design Portfolio, graphic design portfolio, portfolio websites, artist portfolio, adobe portfolio">
+    <meta name="description" content="Working with FWRD: Explore our portfolio and discover our partners’ first-hand experiences of creative led solutions in brand, product and marketing." >
 
-    <title>Document</title>
+    <title>FWRD - Portfolio</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
 </head>
