--- a/links/services.html
+++ b/links/services.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Creative agencies, Internet Marketing, Graphic Design, Merchandising Companies, Web Developer">
+    <meta name="description" content="FWRD provides expert services in creative design, web development, and merchandising to elevate your projects and enable your ideas to take flight">
 
-    <title>Document</title>
+    <title>FWRD - Services</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
 </head>
