--- a/blogs/typingwithtoddlers.html
+++ b/blogs/typingwithtoddlers.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Innovative Team Collaboration, Business Philosophy, Mindful, Effective Communication Strategies, Transparent Business Practice">
+    <meta name="keywords" content="work from home positions, remote work, home office jobs, work from home jobs, remotejobs">
+    <meta name="description" content="A candid look at remote work with young children. Learn how FWRD handles work-life balance, respect, and collaboration in a family-centric environment.">
 
-    <title>Document</title>
+    <title>FWRD - Blog</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
 </head>
