--- a/links/contact.html
+++ b/links/contact.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Web design, Merchandise, Digital Commerce, Ecommerce, Creative">
+    <meta name="description" content="Ready to get started? Contact FWRD today. We're eager to discuss your project's creative, web, and merchandising needs. Let's collaborate!">
 
-    <title>Document</title>
+    <title>FWRD - Contact us</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
 </head>
