--- a/links/testimonials.html
+++ b/links/testimonials.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Web design, Merchandise, Digital Commerce, Ecommerce, Creative">
     
-    <title>Document</title>
+    <title>FWRD - Testimonials</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js"></script>
 </head>
