--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
                 <span class="overlaying-navigation__link overlaying-navigation__link--mid u-padding-top-btm-async u-border-top-green">Let's create some magic</span>
-                <a href="#section-form" id="inquireBtn-responsive" class="button button--green footer__button footer__link">Inquire</a>
+                <a href="#section-form" id="inquireBtn-responsive" class="button button--green footer__button footer__link">Enquire</a>
             </div>
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
@@ -426,7 +426,7 @@
                         </span>
                     </li>
                     <li class="footer__list-item u-left-padding-zero">
-                        <a href="#section-form" class="button button--green footer__button footer__link">Inquire</a>
+                        <a href="#section-form" class="button button--green footer__button footer__link">Enquire</a>
                     </li>
                 </div>
             </ul>
