--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -31,7 +31,7 @@
             </div>
             <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
                 <span class="overlaying-navigation__link overlaying-navigation__link--mid u-padding-top-btm-async u-border-top-green">Let's create some magic</span>
-                <a href="./contact.html" class="button button--green footer__button footer__link">Inquire</a>
+                <a href="./contact.html" class="button button--green footer__button footer__link">Enquire</a>
             </div>
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
@@ -95,9 +95,9 @@
             <div class="zigzag-container__item">
                 <div class="zigzag-container__item-description">
                     <h4 class="zigzag-container__title ">Website Design</h4>
-                    <h3 class="zigzag-container__client ">RE:ACTIVE</h3>
+                    <h3 class="zigzag-container__client ">RE:ACTIV</h3>
                     <p class="zigzag-container__description">Ground up brand design and development for fledging video
-                        production studio in the benelux region.</p>
+                        production studio in the Benelux region.</p>
                     <a class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
@@ -108,7 +108,7 @@
             <div class="zigzag-container__item">
                 <div class="zigzag-container__item-description">
                     <h4 class="zigzag-container__title">Website Design</h4>
-                    <h3 class="zigzag-container__client">IAN BACK</h3>
+                    <h3 class="zigzag-container__client">IAN BICK</h3>
                     <p class="zigzag-container__description">Centralising a successful podcaster's portofolio into a
                         modern, functional platform, while also delivering a tailored brand design uplift.</p>
                     <a class="button button--orange zigzag-container__button">View project</a>
@@ -120,7 +120,7 @@
 
             <div class="zigzag-container__item">
                 <div class="zigzag-container__item-description">
-                    <h4 class="zigzag-container__title">Ecommerce Platform Design</h4>
+                    <h4 class="zigzag-container__title">ecommerce Platform Design</h4>
                     <h3 class="zigzag-container__client">KREEKCRAFT</h3>
                     <p class="zigzag-container__description">A hollistic ecommerce migration and brand uplift project
                         for a premire video games content creator</p>
@@ -297,7 +297,7 @@
                 </span>
             </li>
             <li class="footer__list-item u-left-padding-zero">
-                <a href="./contact.html" class="button button--green footer__button footer__link">Inquire</a>
+                <a href="./contact.html" class="button button--green footer__button footer__link">Enquire</a>
             </li>
         </div>
     </ul>
