--- a/index.html
+++ b/index.html
@@ -223,38 +223,33 @@
             <div class="content-layer">
                     <div class="gallery">
                         <figure class="gallery__item gallery__item--1">
-                            <img src="./img/covers/Index/pp.png" alt="" class="gallery__image">
-                            <figcaption class="gallery__description">Pixel playground</figcaption>
+                            <img src="./img/covers/Index/reactiv.png" alt="" class="gallery__image">
+                            <figcaption class="gallery__description">Re:Activ</figcaption>
                             <div class="button gallery__button button--orange"><span class="button__text">View project</span></div>
                         </figure>
                         <figure class="gallery__item gallery__item--2">
-                            <img src="./img/covers/Index/promo-examples-4.png" alt="" class="gallery__image">
-                            <figcaption class="gallery__description">Promo example frwd</figcaption>
+                            <img src="./img/covers/Index/ian.png" alt="" class="gallery__image">
+                            <figcaption class="gallery__description">Ian Bick</figcaption>
                             <div class="button gallery__button button--orange"><span class="button__text">View project</span></div>
                         </figure>
                         <figure class="gallery__item gallery__item--3">
-                            <img src="./img/covers/Index/reactive.png" alt="" class="gallery__image">
-                            <figcaption class="gallery__description">Re:active</figcaption>
+                            <img src="./img/covers/Index/kreek.png" alt="" class="gallery__image">
+                            <figcaption class="gallery__description">Kreekcraft</figcaption>
                             <div class="button gallery__button button--orange"><span class="button__text">View project</span></div>
                         </figure>
                         <figure class="gallery__item gallery__item--4">
+                            <img src="./img/covers/Index/pp.png" alt="" class="gallery__image">
+                            <figcaption class="gallery__description">Pixel Playground</figcaption>
+                            <div class="button gallery__button button--orange"><span class="button__text">View project</span></div>
+                        </figure>
+                        <figure class="gallery__item gallery__item--5">
                             <img src="./img/covers/Index/nyp.png" alt="" class="gallery__image">
                             <figcaption class="gallery__description">Name your price</figcaption>
                             <div class="button gallery__button button--orange"><span class="button__text">View project</span></div>
                         </figure>
-                        <figure class="gallery__item gallery__item--5">
-                            <img src="./img/covers/Index/kreekcraft.png" alt="" class="gallery__image">
-                            <figcaption class="gallery__description">Kreekcraft</figcaption>
-                            <div class="button gallery__button button--orange"><span class="button__text">View project</span></div>
-                        </figure>
                         <figure class="gallery__item gallery__item--6">
-                            <img src="./img/covers/Index/ian.png" alt="" class="gallery__image">
-                            <figcaption class="gallery__description">Ian bick</figcaption>
-                            <div class="button gallery__button button--orange"><span class="button__text">View project</span></div>
-                        </figure>
-                        <figure class="gallery__item gallery__item--7">
-                            <img src="./img/covers/Index/promo-examples-1.png" alt="" class="gallery__image">
-                            <figcaption class="gallery__description">Promo example frwd</figcaption>
+                            <img src="./img/covers/Index/mayhem.png" alt="" class="gallery__image">
+                            <figcaption class="gallery__description">Florida Mayhem</figcaption>
                             <div class="button gallery__button button--orange"><span class="button__text">View project</span></div>
                         </figure>
                     </div>
