--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                     </svg>
                             </span>
                             <span class="offerings__item-description">
-                                <a href="./links/services.html" class="offerings__link">Brand and creative</a>
+                                <a href="./links/services.html#creative" class="offerings__link">Brand and creative</a>
                             </span>
                         </li>
                         <li class="offerings__item">
@@ -196,7 +196,7 @@
                                     </svg>
                             </span>
                             <span class="offerings__item-description">
-                                <a href="./links/services.html" class="offerings__link">Web design</a>
+                                <a href="./links/services.html#web" class="offerings__link">Web design</a>
                             </span>
                         </li>
                         <li class="offerings__item">
@@ -206,7 +206,7 @@
                                     </svg>
                             </span>
                             <span class="offerings__item-description">
-                                <a href="./links/services.html" class="offerings__link">Merchandise</a>
+                                <a href="./links/services.html#merchandise" class="offerings__link">Merchandise</a>
                             </span>
                         </li>
                     </ul>
