--- a/links/services.html
+++ b/links/services.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="zigzag-container">
-                <div class="zigzag-container__item section-services__row--creative">
+                <div id="creative" class="zigzag-container__item section-services__row--creative">
                     <div class="zigzag-container__item-description">
                         <img class="zigzag-container__image" src="../img/svg/Services/services-creative.svg">
                     </div>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
 
-                <div class="zigzag-container__item section-services__row--web">
+                <div id="web" class="zigzag-container__item section-services__row--web">
                     <div class="zigzag-container__item-description">
                         <img class="zigzag-container__image" src="../img/svg/Services/service-web.svg">
                     </div>
@@ -204,7 +204,7 @@
                     </div>
                 </div>
 
-                <div class="zigzag-container__item section-services__row--merchandise">
+                <div id="merchandise" class="zigzag-container__item section-services__row--merchandise">
                     <div class="zigzag-container__item-description">
                         <img class="zigzag-container__image" src="../img/svg/Services/service-merchandise.svg">
                     </div>
